Include search by flight

--- a/jcvrbaseapp/templates/jcvrbaseapp/index.html
+++ b/jcvrbaseapp/templates/jcvrbaseapp/index.html
@@ -31,6 +31,10 @@
             <input type="text" class="form-control" id="txtToDateTime" placeholder="To DateTime Ej: AAAA-MM-ddTHH:mm" />
             <input type="button" id="window2" value="Go" class="btn btn-default">
         </div>
+        <div class="form-group">
+            <input type="text" class="form-control" id="txtFlyID" placeholder="Fly ID" />
+            <input type="button" id="btnSearchByID" value="Search" class="btn btn-default">
+        </div>
     </div>
     <p></p>
     <p></p>
