Button to set current time in gantt chart

--- a/jcvrbaseapp/templates/jcvrbaseapp/index.html
+++ b/jcvrbaseapp/templates/jcvrbaseapp/index.html
@@ -23,6 +23,7 @@
             <input type="button" id="moveLeft" value="Move left" class="btn btn-default"/>
             <input type="button" id="moveRight" value="Move right" class="btn btn-default"/>
             <input type="button" id="fitTimeline" value="Fit Timeline" class="btn btn-default"/>
+            <input type="button" id="setCurrentTime" value="Set Current Time" class="btn btn-default"/>
         </div>
     </div>
     <p></p>
